fixed bug on mobile

--- a/css/posts/2016/10/22/style.css
+++ b/css/posts/2016/10/22/style.css
@@ -61,7 +61,7 @@
 }
 
 #progressBar {
-  width: 360px;
+  max-width: 360px;
   height: 4px;
   overflow: hidden;
   position: relative;
